--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+  outline-color: purple;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -36,6 +37,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 #maincontent {
+  text-align: center;
   margin-right: auto;
   margin-left: auto;
   width: 100%;
@@ -77,7 +79,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: calc(100% - 80px);
 }
 
 /* Display list items side by side */
@@ -203,34 +205,37 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  max-height: 87%;
+  height: 400px;
+  /*position: fixed;*/
   right: 0;
   top: 80px;
-  width: 50%;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
-  width: 100%;
+  max-width: 100%;
 }
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  left: 0;
+  right:0;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 18pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 0 15px;
   text-transform: uppercase;
   line-height: 1.1;
 }
 #restaurant-img {
 	width: 90%;
+  max-width: 800px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -242,7 +247,7 @@ nav h1 a {
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin: auto;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
@@ -251,11 +256,12 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+
+  margin: auto;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 10px 10px 80px;
+  /*padding-bottom: 80px;*/
 }
 #reviews-container h2 {
   color: #f58500;
@@ -265,23 +271,52 @@ nav h1 a {
   padding-bottom: 1pt;
 }
 #reviews-list {
-  margin: 0;
   padding: 0;
+  margin: auto;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
+  border-radius: 15px;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 auto 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+/*  padding: 20px;*/
   position: relative;
   width: 85%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  padding: 0px 20px 20px 20px;
+}
+#reviews-list li p:first-child {
+  text-align: left;
+  padding-top: 20px;
+  background-color: #333;
+  color: #fff;
+  font-size: 16px;
+  margin-top: 0;
+  /*width: 100%;*/
+}
+#reviews-list li p:nth-child(2) {
+  background-color: purple;
+  width: 20%;
+  min-width: 57px;
+  margin: 0 0 0 20px;
+  color: white;
+  padding: 14px;
+  border-radius: 15px;
+}
+#reviews-list li b {
+  float: right;
+  padding: 0px;
+  margin: 0 0 0 22%;
 }
 #restaurant-hours td {
   color: #666;
+
+}
+#restaurant-hours{
+   width: 65%;
+  margin: auto;
 }
