Service Worker additions

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@ body {
 	position:relative;
   outline-color: purple;
 }
+body:focus{
+  outline: none !important;
+}
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
