lied, now is the last tweak

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -63,6 +63,8 @@
 	top: 0;
 }
 
+/*skip-link class from Udacity video on focus*/
+
 /*@media screen and (min-width: 1200px){
 	#restaurant-list{
 		width: 
